[gd_scene load_steps=7 format=3 uid="uid://b8klrhpk7hud4"]

[ext_resource type="Script" uid="uid://c8bvqqnktsxwj" path="res://content/effect_game/effect_game.gd" id="1_vkigj"]
[ext_resource type="Theme" uid="uid://cnbeyduhjvl7o" path="res://content/effect_game/effect_game.tres" id="1_y5e8c"]
[ext_resource type="PackedScene" uid="uid://dfu72hq2vx505" path="res://content/effect_game/stratagem_selection_panel.tscn" id="3_q3pke"]
[ext_resource type="Script" uid="uid://d33ubvbkeqppo" path="res://content/effect_game/menu_text.gd" id="3_r6mra"]
[ext_resource type="Script" uid="uid://drxfj1lvtqfwg" path="res://content/effect_game/description_text.gd" id="5_s1rfw"]

[sub_resource type="LabelSettings" id="LabelSettings_s1rfw"]
line_spacing = 0.0
font_size = 36

[node name="EffectGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y5e8c")
script = ExtResource("1_vkigj")

[node name="MenuText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 72
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
autowrap_trim_flags = 0
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0
script = ExtResource("3_r6mra")

[node name="DescriptionText" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
text = "effect_description.back_to_title"
label_settings = SubResource("LabelSettings_s1rfw")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_trim_flags = 0
justification_flags = 0
script = ExtResource("5_s1rfw")

[node name="StratagemSelectionPanel" parent="." instance=ExtResource("3_q3pke")]
layout_mode = 0
offset_top = 720.0
offset_bottom = 1440.0
